--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     <module>integration/spark-common</module>
     <module>integration/spark-common-test</module>
     <module>assembly</module>
+    <module>examples/spark-streaming</module>
   </modules>
 
   <properties>
